<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="-20dp"
            android:weightSum="5" >

            <EditText
                android:id="@+id/editTextZaehler1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_column="1"
                android:layout_weight="3"
                android:background="#FF0000" />

            <EditText
                android:id="@+id/editTextZaehler2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" >
            </EditText>
        </TableRow>

        <!-- edittext span 2 column -->

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:weightSum="5" >

            <View
                android:id="@+id/bruchstrich1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_column="0"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:layout_gravity="center|center" />

            <Button
                android:id="@+id/buttonoperator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="3"
                android:gravity="center|center"
                android:text="@string/plus"
                android:textSize="30sp"
                android:background="@android:color/transparent" />

            <View
                android:id="@+id/bruchstrich2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_column="2"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:layout_gravity="center|center" />
        </TableRow>

        <!-- 3 columns -->

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:weightSum="5" >

            <EditText
                android:id="@+id/editTextNenner1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_column="1"
                android:layout_weight="3"
                android:background="#FF0000" />

            <EditText
                android:id="@+id/editTextNenner2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" >
            </EditText>
        </TableRow>


    </TableLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="2"
	    android:layout_marginTop="50dp"
	    android:layout_marginLeft="25dp"
	    android:layout_marginRight="25dp"
	    android:layout_marginBottom="50dp" >
	
	
	    <Button
	    android:id="@+id/buttonclear2"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:text="@string/neu"
	    android:drawableLeft="@drawable/clear"
	    android:onClick="buttonClear" />
	
	
	    <Button
	    android:id="@+id/buttonok2"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:text="@string/ok"
	    android:drawableLeft="@drawable/check"
	    android:onClick="buttonOK" />


    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="2"
	    android:layout_marginLeft="25dp"
	    android:layout_marginRight="25dp"
	    android:layout_marginBottom="20dp" >
	
	
	    <TextView
	    android:id="@+id/textViewErgebnis1"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1.2"
	    android:text="@string/ergebnisBruch" />
	
	
	    <TextView
	    android:id="@+id/textViewErgebnisBruch"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.8"
	    android:layout_marginLeft="25dp"
	    android:layout_marginRight="5dp"
	    android:gravity="right"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/blue"
	    android:textStyle="bold" />


    </LinearLayout>
    
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="2"
	    android:layout_marginLeft="25dp"
	    android:layout_marginRight="25dp" >
	
	
	    <TextView
	    android:id="@+id/textViewErgebnis2"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1.2"
	    android:text="@string/ergebnisDezi" />
	
	
	    <TextView
	    android:id="@+id/textViewErgebnisDezi"
	    android:layout_width="0dp"
	    android:layout_weight="0.8"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="25dp"
	    android:layout_marginRight="5dp"
	    android:gravity="right"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/blue"
	    android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>